K8s/Node/Master/rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: nginx:latest
          resources:
            limits:
              memory: "120Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge : 1
    type: RollingUpdate
