K8s/Node/Master/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  #namespace : my-ns
spec:
  selector:
    app: my-app
  ports:
    - name: nginx
      port: 80
      targetPort: 80
  type: ClusterIP
